# igloo

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  README.md
cmake/: igloo_quality.cmake
igloo/: CMakeLists.txt
igloo/igloo/: shader.cpp  shader.h
unit_tests/: CMakeLists.txt  shader_test.cpp
